<resources>
    <string name="app_name">RideAlong</string>
    <string name="on_google_map">On Google Map</string>
    <string name="title_activity_main">Map Setting</string>
    <string name="title_activity_map">Map</string>
    <string name="action_quit">Quit</string>
    <string name="show_my_position">Show My Position</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="weighting_shortest">Shortest</string>
    <string name="weighting_fastest">Fastest</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="from_location">From Location</string>
    <string name="to_location">To Location</string>
    <string name="from_loc">From</string>
    <string name="to_loc">To</string>
    <string name="choose_from_favorite">Choose from favorite</string>
    <string name="enter_lat_lon">Enter latitude longitude</string>
    <string name="point_on_map">Point on map</string>
    <string name="travel_mode">Travel mode</string>
    <string name="travel_mode_foot">Foot</string>
    <string name="travel_mode_bike">Bike</string>
    <string name="travel_mode_car">Car</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="stop_navigation">Stop navigation</string>
    <string name="stop_navigation_msg">dismiss current navigation?</string>
    <string name="delete_msg">Confirm to delete!</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="stop">Stop</string>
    <string name="h_m">h:m</string>
    <string name="settings">Settings</string>
    <string name="change_map">Close map view</string>
    <string name="download_map">Download map</string>
    <string name="navigation">Navigation</string>
    <string name="alternate_route">Alternate route</string>
    <string name="fastest">Fastest</string>
    <string name="shortest">Shortest</string>
    <string name="directions_navi">Directions and navigation</string>
    <string name="title_activity_select">Select a map</string>
    <string name="title_activity_download">Download maps</string>
    <string name="remove">Remove</string>
    <string name="loading_dotdotdot">Loading ...</string>
    <string name="path_finding">Pathfinding</string>
    <string name="search_location">Search location</string>
    <string name="tracking_stop">stop ?</string>
    <string name="tracking_start">start ?</string>
    <string name="tracking_load">load ?</string>
    <string name="dialog_stop_save_tracking">Stop and save tracking ?</string>
    <string name="title_activity_analytics">Analytics</string>
    <string name="visit_home_page">Visit home page</string>
    <string name="title_activity_about">About</string>
    <string name="locale_code">Locale code</string>
    <string name="location">Location</string>
    <string name="search_engine">Search engine</string>
    <string name="add_address">Add address</string>
    <string name="title">Title</string>
    <string name="add_text">Additional text</string>
    <string name="rate_pocket_maps">Rate Pocket Maps</string>
    <string name="swipe_out">Swipe out to delete</string>
    <string name="dont_show_again">Dont show again</string>
    <string name="wrong_direction">Wrong direction</string>
    <string name="wait_for_location">Waiting for location</string>
    <string name="light_navi">Use Light-Sensor</string>
    <string name="voice_navi">Use Voice</string>
    <string name="switch_maps_dir">Switch maps directory</string>
    <string name="needs_vers_lollipop">Needs at least Android-version 21</string>
    <string name="autoselect_map">Select map automatically</string>
    <string name="autoselect_map_text">Start app everytime in selected map.</string>
    <string name="units">Select unit type</string>
    <string name="units_imperal">Imperal units</string>
    <string name="units_metric">Metric units</string>
    <string name="gps_is_off">GPS is turned off</string>
    <string name="gps_settings">GPS settings</string>
    <string name="gps_smooth">Smoothen movement</string>
    <string name="search_hint">Enter text</string>
    <string name="edit">Edit</string>
    <string name="help">Help</string>

    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- RideAlong strings -->
    <string name="ra_title_activity_login">Login</string>
    <string name="ra_title_activity_register">Register</string>
    <string name="ra_title_activity_group_create">Group Create</string>
    <string name="ra_prompt_email">Email</string>
    <string name="ra_prompt_email_confirmation">Email Confirmation</string>
    <string name="ra_prompt_password">Password</string>
    <string name="ra_prompt_password_confirmation">Password Confirmation</string>
    <string name="ra_prompt_username">Username</string>
    <string name="ra_action_sign_in">Login</string>
    <string name="ra_action_sign_in_short">Login</string>
    <string name="ra_action_register">Register</string>
    <string name="ra_create_group">Create Group</string>
    <string name="ra_join_group">Join Group</string>
    <string name="ra_group_id">Group ID</string>
    <string name="ra_cancel">Cancel</string>
    <string name="ra_back">Back</string>

    <!-- RideAlong text -->
    <string name="ra_group_create_tooltip">
        Select \'Create Group\' button below
        to create a new group.
        \n\n
        Then, share the group code above to let
        your friends join this group. Once
        you are finished adding friends or
        have saved the code, press the ‘Done’ button below.
    </string>
    <string name="ra_group_join_tooltip">
        Enter a Group ID in the field above, then press
        the \'Join Group\' button below.
    </string>
</resources>
